fix icon align

--- a/tpl/app/less/stb/ui/modal.message.less
+++ b/tpl/app/less/stb/ui/modal.message.less
@@ -52,16 +52,13 @@
             & > div.body > .component.list .item {
                 height:unit(@panelTitleHeight, px);
                 line-height:unit(@panelTitleHeight, px);
-                text-align:left;
                 padding:0 unit(@safePadding, px);
 
                 .component.checkBox, .component.layout > div.icon {
                     height:unit(@panelTitleHeight, px);
                     line-height:unit(@panelTitleHeight, px);
-                    width:unit(@panelTitleHeight * 2 / 3, px);
-                }
-                .component.checkBox {
                     width:unit(@panelTitleHeight / 2, px);
+                    text-align:left;
                 }
             }
             & > div.overlay {
